--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       content="width=device-width, initial-scale=1, maximum-scale=1"
     />
     <title>Weather Forecast</title>
+    <link rel="icon" type="image/png" href="img/logo.svg">
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/resp.css" />
     <link
